--- a/frontend-nanodegree-arcade-game-master/index.html
+++ b/frontend-nanodegree-arcade-game-master/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classic Arcade Game</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
